<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/holo_purple"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_tobacco_history"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illness"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period_ago"
            android:textStyle="bold"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/illness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fever"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_days"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/time_period_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_month_ago"
            android:layout_weight="1" />

    </TableRow>

    <Button
                android:backgroundTint="@color/default_button"
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity="end"
        android:layout_margin="16dp" />

</LinearLayout>
