<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/rg_roles_select_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:paddingStart="@dimen/padding_wide"
        android:paddingEnd="@dimen/padding_wide"
        android:weightSum="3"
        tools:ignore="MissingConstraints">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_registrar_dialog"
            style="@style/radio_item_lang"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar_role" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_nurse_dialog"
            style="@style/radio_item_lang"
            android:visibility="gone"
            android:text="@string/nurse_role" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_doctor_dialog"
            style="@style/radio_item_lang"
            android:visibility="gone"
            android:text="@string/doctor_role" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_pharmacist_dialog"
            style="@style/radio_item_lang"
            android:visibility="gone"
            android:text="@string/pharmacist_role" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_lab_technician_dialog"
            style="@style/radio_item_lang"
            android:visibility="gone"
            android:text="@string/lab_technician_role" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>