<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.login_activity.cho_login.ChoLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/select_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/btn_hwc"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:weightSum="4">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_hwc"
                style="@style/radio_item_lang"
                android:text="@string/facility"
                android:value="@string/hwc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/btn_outreach"
                style="@style/radio_item_lang"
                android:text="@string/outreach"
                android:value="@string/outreach" />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/select_activity_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>
